--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ buildscript {
   }
 }
 
+ext.groovyVersion = '2.4.3'
+
 apply plugin: 'java'
 apply plugin: 'groovy'
 apply plugin: 'spring-boot'
@@ -20,8 +22,9 @@ repositories {
 }
 
 dependencies {
-  compile 'org.codehaus.groovy:groovy-all:2.4.3'
-  testCompile 'org.codehaus.groovy:groovy:2.4.3'
+  compile 'org.codehaus.groovy:groovy-all:${groovyVersion}'
+  testCompile 'org.codehaus.groovy:groovy:${groovyVersion}'
+  compile "org.codehaus.groovy:groovy-templates:${groovyVersion}"
 
   compile("org.springframework.boot:spring-boot-starter-web")
   compile("org.springframework.boot:spring-boot-starter-data-jpa")
