--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,6 @@ dependencies {
   compile("org.springframework.boot:spring-boot-starter-data-jpa")
   compile("org.springframework.boot:spring-boot-starter-thymeleaf")
 
-  compile("com.h2database:h2")
+  compile 'mysql:mysql-connector-java:5.1.36'
   testCompile("junit:junit")
 }
